--- a/frontend-web/miaudote/public/index.html
+++ b/frontend-web/miaudote/public/index.html
@@ -9,11 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!-- Materialize css -->
-    <link rel="stylesheet" href="../src//materialize/css/materialize.css">
+    <!--Import Google font-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
