--- a/frontend-web/miaudote/public/index.html
+++ b/frontend-web/miaudote/public/index.html
@@ -9,8 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!--Import Google font-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,13 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MiauDote</title>
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root">
-      
-    </div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -40,12 +37,7 @@
       The build step will place the bundled scripts into the <body> tag.
 
       To begin the development, run `npm start` or `yarn start`.
-    To create a production bundle, use `npm run build` or `yarn build`.
+      To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-
-    <!-- Materialize JS -->
-    <script src="../src/materialize/js/materialize.js"></script>
   </body>
 </html>
